# Quantum-Gaurd

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  GITHUB_FILES_LIST.md  INTEGRATION_SUMMARY.md  LICENSE  OPENAPI.yaml  PRODUCTION_DEPLOYMENT.md  QUANTUM_GUARD_WHITEPAPER_EN.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_CERTIFICATE.md  VPS_DEPLOYMENT_GUIDE.md  WHITE_PAPER_QUANTUM_GUARD.md  blockchain.py  blockchain_5470_synced_ai_zk.py  electron-builder.yml  foundry.toml  hardhat.config.js  package-lock.json  package.json  pyproject.toml  qnn_api.py  replit.md  start_blockchain.py  start_core_node.py  start_decentralized_network.py  start_massive_network.py  start_real_blockchain.py  tailwind.config.ts  test_massive_network.py  wallet.py
adapter/: demo.js  package.json  server.js  start.sh
ai_models/: transaction_validator_32.h5
contracts/: CreditLineVault.sol  DynamicFeeDiscount.sol  GasSponsorVault.sol  IntentEscrow.sol  MPCSmartWallet.sol  QNNOracle.sol  ReputationSBT.sol  ZKVerifierGate.sol
core/: __init__.py  ai_validator.py  amm_pool.py  blockchain.py  cli.py  decentralized_mining.py  deploy_seed_node.sh  dns_seeds.py  node.py  node_api.py  p2p_node.py  peer_discovery.json  rpc_server.py  seed_monitor.html  seed_node_manager.py  seed_node_server.py  zk_proofs.py
dapp/: aa4337.js  app.js  chains.config.json  chat.js  contracts.5470.json  contracts.8453.json  contracts.js  contracts.json  deployer.js  dex.js  eip712.js  index.html  mpc.js  (+20 more)
qnn_zk/halo2_tx_validator/: Cargo.toml
qnn_zk/halo2_tx_validator/src/: lib.rs  main.rs
(+75 files in other folders)
