[package]
name = "halo2_tx_validator"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { version = "0.3", default-features = false }
halo2curves = "0.6"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
